[package]
name = "diaryx_server"
description = "Platform-agnostic server core for Diaryx cloud adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
license-file.workspace = true

[features]
# Pulls in `reqwest` to provide a reusable `ReqwestDispatcher` in
# `contract::http`. Off by default; consumers that want to run the contract
# suite against a live HTTP server enable this feature in their dev-deps.
reqwest-dispatcher = ["dep:reqwest"]

# Enables wall-clock timestamps in `sync::time` on wasm32 targets that have a
# JS host (e.g. Cloudflare Workers via `diaryx_core/browser-js`). Native
# targets always use `chrono::Utc::now()`. Extism guest wasm builds should
# leave this off so the monotonic fallback is used.
browser-js = ["diaryx_core/browser-js"]

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "v5"] }
webauthn_rp = { version = "0.3", default-features = false, features = ["bin", "custom", "serde", "serde_relaxed", "serializable_server_state"] }
base64 = "0.22"
futures = "0.3"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json"] }

# CRDT sync primitives (moved from diaryx_sync)
diaryx_core = { workspace = true }
yrs = { version = "0.25", features = ["sync"] }
indexmap = { workspace = true }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
rusqlite = { version = "0.34", features = ["bundled"] }
