[package]
name = "diaryx_spoiler_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Spoiler mark Extism guest plugin for Diaryx (||hidden text||)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
