[package]
name = "diaryx_storage_gdrive_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Extism WASM guest plugin — Google Drive storage as AsyncFileSystem"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
