[package]
name = "diaryx_storage_s3_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Extism WASM guest plugin — S3-compatible storage as AsyncFileSystem"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
