[package]
name = "diaryx_sync_server"
description = "Multi-device sync server for Diaryx with magic link authentication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
license-file.workspace = true

[dependencies]
# Internal crates
diaryx_core = { workspace = true, features = ["crdt", "crdt-sqlite", "git", "markdown"] }
diaryx_sync = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Email (Resend HTTP API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Git (for history API endpoints)
git2 = { version = "0.19", default-features = false }

# Utilities
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
url = "2"
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
dashmap = "6"
sha2 = "0.10"
mime_guess = "2"
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-types = "1"
walkdir = "2"
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.26"

# Y-sync v2 (siphonophore-based)
siphonophore = { version = "0.1.0", package = "diaryx-siphonophore" }
kameo = "0.19"
async-trait = "0.1"
yrs = "0.24"

# WebAuthn / Passkeys
webauthn-rs = { version = "0.5", default-features = false, features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = "0.5"

# Stripe billing
async-stripe = { version = "0.41", default-features = false, features = ["runtime-tokio-hyper-rustls", "checkout", "billing"] }

# Environment
dotenvy = "0.15"

[build-dependencies]
diaryx_core = { path = "../diaryx_core" }

[dev-dependencies]
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
