[package]
name = "diaryx_templating"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Shared templating domain logic for Diaryx plugins"
publish = false

[dependencies]
handlebars = "6"
chrono.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
