[package]
name = "diaryx_templating_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Extism guest plugin for Diaryx templating functionality"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = { workspace = true }
diaryx_templating = { workspace = true }
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22"
